# yaRust

./: .gitignore  README.md
bank-system/src/: storage.rs
bankAccountParser/: Cargo.toml
bankAccountParser/src/: csv_format.rs  lib.rs
bank_account_parser/: Cargo.toml
bank_account_parser/example_data/: new_file.mt940
bank_account_parser/examples/: example_compare.rs  example_converter.rs
bank_account_parser/examples/data/: camt053.exmpl  csv.exmpl  mt940.exmpl
bank_account_parser/src/: camt053_format.rs  camt053_iterator.rs  common.rs  csv_format.rs  error.rs  lib.rs  mt940_format.rs  transactions_holder.rs
comparer/: Cargo.toml
comparer/src/: main.rs
converter/: Cargo.toml
converter/src/: main.rs
example_data/: camt 053 danske bank  camt 053 danske bank2
lessons/lesson1/bank-system/examples/: cli.rs
lessons/lesson1/bank-system/src/: balance.rs  lib.rs  my_macros.rs  transaction.rs
lessons/lesson1/proc_my_macros/src/: lib.rs
lessons/lesson2/client-server/client/: Cargo.toml
lessons/lesson2/client-server/client/src/: main.rs
lessons/lesson2/client-server/server/src/: main.rs  server.rs  vault.rs
lessons/lesson2/multithread/src/: client_server.rs  main.rs
lessons/lesson2/src/: threads.rs
lessons/lesson2/udp-monitor/: Cargo.toml
lessons/lesson2/udp-monitor/bins/monitor/: main.rs
lessons/lesson2/udp-monitor/bins/sensor_simulator/: main.rs
lessons/lesson2/udp-monitor/examples/: receiver.rs
lessons/lesson2/udp-monitor/src/: lib.rs  logger.rs  metrics.rs  receiver.rs  receiver2.txt  sender.rs
