[package]
name = "room_monitoring"
version = "0.1.0"
edition = "2021"

[features]
default = ["random"]   # Фичи по умолчанию
random =  ["dep:rand"] # Фича random включает опциональную зависимость rand
sqlite = []            # Пример дополнительной фичи
#foo = ["bar/baz"]      # означает «включи фичу baz внутри зависимости bar, когда активируется наша фича foo»
logging = ["dep:log"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = { version = "0.8", optional = true }
log = { version = "0.4.29", optional = true }
chrono = "0.4.43"

[[bin]]
name = "sensor_simulator"
path = "bins/sensor_simulator/main.rs"

[[bin]]
name = "monitor"
path = "bins/monitor/main.rs"